prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/multiple_docstrings.nut
// EXPECT_ERROR: "multiple docstrings"
@@"first docstring"
@@"second docstring"
function foo() {
    return 42
}
